--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -152,12 +152,12 @@ footer {
   text-align: center;
   transition: transform 0.3s ease;
   max-width: 250px; 
-  max-height: 300px; 
+  max-height: 350px; 
 }
 
 .gallery-item img {
   width: 100%;
-  height: 85%;
+  height: 75%;
   display: block;
   object-fit: cover;
   object-position: center;
@@ -170,6 +170,8 @@ footer {
   margin: 13px 0;
   font-size: .9rem;
   color: $text-color;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .gallery-item a {
